# NanoCode

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_CN.md  pyproject.toml
src/nanocode/: __init__.py  __main__.py  backends.py  engine.py  history.py  pricing.py  router.py
src/nanocode/agents/: __init__.py  base.py  claude.py  codex.py  opencode.py
src/nanocode/tools/: __init__.py
src/nanocode/ui/: app.py  autocomplete.py  chat_view.py  command_history.py  context_panel.py  loading.py  status_bar.py  terminal_view.py
tests/: test_agents.py  test_autocomplete.py  test_command_history.py  test_context_panel.py  test_engine.py  test_history.py  test_loading_integration.py  test_model.py  test_pricing.py  test_router.py  test_tools.py  test_ui.py
