[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanocode"
version = "0.1.0"
description = "A micro coding agent that auto-routes between Claude Code, Codex, and OpenCode styles"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "anthropic>=0.40.0",
    "textual>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-mock>=3.14"]

[project.scripts]
nanocode = "nanocode.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nanocode"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
